--- a/website/index.html
+++ b/website/index.html
@@ -27,28 +27,51 @@
     <nav>
         <img src="images/logo.png" class="logo">
         <ul>
-            <li><a href="https://discord.gg/wzf4HajUQp">Discord</a></li>
+            <li><a href="">Discord</a></li>
         </ul>
     </nav>
 
     <div class="text-container">
         <h1>Jinx</h1>
-        <p>Jinx is a scripting utility with an intuitive graphical interface to help you quickly write and execute scripts.</p>
-        <a href="https://krnl.ca/">
+        <p>Product Description</p>
+        <a href="">
             <button type="button">Download</button>
         </a>
     </div>
     <div class="side-panel">
         <h1>Features</h1>
-        <div class="Stable">
-            <h1>Stable</h1>
-            <p>By applying a variety of technology, Krnl provides a seamless user experience.</p>
 
-            <h1>Performant</h1>
-            <p>Responsive execution times are achieved through the implementation of LuaU.</p>
+        <div class="container">
+            <div class="box">
+                <div class="content">
+                    <h3>Feature1</h3>
+                    <p>Desc</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <h3>Feature2</h3>
+                    <p>Desc</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <h3>Feature3</h3>
+                    <p>Desc</p>
+                </div>
+            </div>
+        </div>
 
-            <h1>Reliable</h1>
-            <p>With exceptional update times, Krnl boasts near perfect uptime.</p>
+
+        <div class="credits">
+            <h1>credits</h1>
+            <div class="box">
+                <div class="info">
+                    <img src="https://cdn.discordapp.com/avatars/534768592198041631/0f349ed15f4d4f23a8a78f5a29cda396.webp?size=128">
+                    <h4>Nxyi</h4>
+                    <p>Developer</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
