--- a/website/index.html
+++ b/website/index.html
@@ -70,6 +70,7 @@
                     <img src="https://cdn.discordapp.com/avatars/534768592198041631/0f349ed15f4d4f23a8a78f5a29cda396.webp?size=128">
                     <h4>Nxyi</h4>
                     <p>Developer</p>
+                    <a href="https://github.com/NX-Y"><img src="images/github.png"></a>
                 </div>
             </div>
         </div>
